--- a/style.css
+++ b/style.css
@@ -1,3 +1,34 @@
-body {
-
+body{
+  background-color: lightpink;
+}
+h1{
+  font-size: 300%;
+  letter-spacing:3xp;
+  color: white;
+    text-decoration: underline;
+}
+p{
+  font-size: 200%;
+  letter-spacing:3xp;
+  color: white
+}
+img{
+  width: 600px;
+  border-style: solid;
+}
+ul{
+  text-align: center;
+  list-style-type: none;
+  position: fixed;
+}
+li {
+  float: left;
+}
+li a{
+  padding: 20px;
+  color: purple;
+}   
+li a:hover{
+  background-color: purple;
+  color: white;
 }
